fixed grid-bag layout preventing proper expansion and alignment fields can now have limited visual width if specified
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/trunk@7775 d66e5487-c4fa-4dda-8c8e-ca23240363c0